--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
@@ -40,5 +40,6 @@ dependencies {
 
 
     implementation "com.airbnb.android:lottie:5.2.0"
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
 
 }
