--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'com.hanif.talkingTom'
+    namespace 'com.hanif.gdele'
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.hanif.talkingTom"
+        applicationId "com.hanif.gdele"
         minSdk 21
         targetSdk 33
         versionCode 1
@@ -32,7 +32,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.0'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
